--- a/index.html
+++ b/index.html
@@ -13,170 +13,233 @@
 </head>
 
 <body>
+
     <header>
-        <div class="container">
-            <a href="#" class="logo">
-                <img src="img/photo_2019-12-24_19-57-41.jpg" alt="logo" />
+        <div class="container ">
+            <a href="# " class="logo ">
+                <img src="img/photo_2019-12-24_19-57-41.jpg " alt="logo " />
             </a>
             <nav>
                 <ul>
                     <li>
-                        <a href="#">home</a>
+                        <a href="# ">home</a>
                     </li>
-                    <li class="elemens">
-                        <a href="#">about </a>
-                    </li>
-                    <li>
-                        <a href="#"> work</a>
+                    <li class="elemens ">
+                        <a href="# ">about </a>
                     </li>
                     <li>
-                        <a href="#">process</a>
+                        <a href="# "> work</a>
                     </li>
                     <li>
-                        <a href="#">services</a>
+                        <a href="# ">process</a>
                     </li>
                     <li>
-                        <a href="#">testimonials</a>
+                        <a href="# ">services</a>
                     </li>
                     <li>
-                        <a href="#">contact</a>
+                        <a href="# ">testimonials</a>
+                    </li>
+                    <li>
+                        <a href="# ">contact</a>
                     </li>
                 </ul>
             </nav>
         </div>
     </header>
-    <section class="banner-inform">
-        <div class="container container-main">
-            <div class="fl_right">
+    <section class="banner-inform ">
+        <div class="container container-main ">
+            <div class="fl_right ">
                 <h1>We Design and Develop</h1>
                 <p>We are a new design studio based in USA. We have over 20 years of combined experience, and know a thing or two about designing websites and mobile apps.</p>
-                <a class="button" href="#">contact us</a>
+                <a class="button " href="# ">contact us</a>
             </div>
 
         </div>
     </section>
-    <section class="white-section">
-        <div class="container">
+    <section class="white-section ">
+        <div class="container ">
             <h2>About Us</h2>
             <p>Divide have don't man wherein air fourth. Own itself make have night won't make.<br>A you under Seed appear which good give.Own give air without fowl moveth dry first<br>heaven fruit, dominion she'd won't very all.
             </p>
-            <img src="img/01_One-Page_03.png">
+            <img src="img/01_One-Page_03.png ">
         </div>
     </section>
-    <section class="section-skills">
+    <section class="section-skills ">
         <div>
             <h3>Professional Skills</h3>
             <span>UI/UX Design&nbsp;&nbsp;&nbsp;&nbsp;75%</span>
-            <div class="progress-bar progress-bar-75"></div>
+            <div class="progress-bar progress-bar-75 "></div>
             <span>Web developement&nbsp;&nbsp;&nbsp;&nbsp;90%</span>
-            <div class="progress-bar progress-bar-90"></div>
+            <div class="progress-bar progress-bar-90 "></div>
             <span>Marketing&nbsp;&nbsp;&nbsp;&nbsp;65%</span>
-            <div class="progress-bar progress-bar-65"></div>
+            <div class="progress-bar progress-bar-65 "></div>
         </div>
 
     </section>
-    <section class="container-blue">
-        <div class="container">
-            <div class="achievement">
-                <img src="img/pe-7s-portfolio.png" alt="logo">
-                <div class="achievement-text">
-                    <div class="value">548</div>
+    <section class="container-blue ">
+        <div class="container ">
+            <div class="achievement ">
+                <img src="img/pe-7s-portfolio.png " alt="logo ">
+                <div class="achievement-text ">
+                    <div class="value ">548</div>
                     <div>projects completed</div>
                 </div>
             </div>
-            <div class="achievement">
-                <img src="img/pe-7s-clock.png" alt="logo">
-                <div class="achievement-text">
-                    <div class="value">1465</div>
+            <div class="achievement ">
+                <img src="img/pe-7s-clock.png " alt="logo ">
+                <div class="achievement-text ">
+                    <div class="value ">1465</div>
                     <div>working hours</div>
                 </div>
             </div>
-            <div class="achievement">
-                <img src="img/pe-7s-star.png" alt="logo">
-                <div class="achievement-text">
-                    <div class="value">612</div>
+            <div class="achievement ">
+                <img src="img/pe-7s-star.png " alt="logo ">
+                <div class="achievement-text ">
+                    <div class="value ">612</div>
                     <div>positive feedbacks</div>
                 </div>
             </div>
-            <div class="achievement">
-                <img src="img/pe-7s-like.png" alt="logo">
-                <div class="achievement-text">
-                    <div class="value">735</div>
+            <div class="achievement ">
+                <img src="img/pe-7s-like.png " alt="logo ">
+                <div class="achievement-text ">
+                    <div class="value ">735</div>
                     <div>happy clients</div>
                 </div>
             </div>
         </div>
     </section>
-    <section class="white-section">
-        <div class="container">
+    <section class="white-section ">
+        <div class="container ">
             <h2>Our Work Process</h2>
             <p>Was years it seasons was there form he in in them together over that,<br> third sixth gathered female creeping bearing behold years.</p>
 
-            <div class="video">
-                <div class="play-btn">
+            <div class="video ">
+                <div class="play-btn ">
 
                 </div>
             </div>
         </div>
     </section>
-    <section class="container-grey">
-        <div class="container">
-            <div class="opportunity">
-                <img src="img/pe-7s-diamond.png">
+    <section class="container-grey ">
+        <div class="container ">
+            <div class="opportunity ">
+                <img src="img/pe-7s-diamond.png ">
                 <span>ui / ux design</span>
                 <div>Be set fourth land god darkness<br> make it wherein own</div>
             </div>
-            <div class="opportunity">
-                <img src="img/pe-7s-arc.png">
+            <div class="opportunity ">
+                <img src="img/pe-7s-arc.png ">
                 <span>web development</span>
                 <div>A she'd them bring void moving<br> third she'd kind fill</div>
             </div>
-            <div class="opportunity">
-                <img src="img/pe-7s-phone.png">
+            <div class="opportunity ">
+                <img src="img/pe-7s-phone.png ">
                 <span>app / mobile</span>
                 <div>Dominion man second spirit he,<br> earth they're creeping</div>
             </div>
-            <div class="opportunity">
-                <img src="img/pe-7s-joy.png">
+            <div class="opportunity ">
+                <img src="img/pe-7s-joy.png ">
                 <span>game design</span>
                 <div>Morning his saying moveth it<br> multiply appear life be</div>
             </div>
-            <div class="opportunity">
-                <img src="img/pe-7s-plane.png">
+            <div class="opportunity ">
+                <img src="img/pe-7s-plane.png ">
                 <span>SEO / marketing</span>
                 <div>Give won't after land fill creeping<br> meat you, may</div>
             </div>
-            <div class="opportunity">
-                <img src="img/pe-7s-star2.png">
+            <div class="opportunity ">
+                <img src="img/pe-7s-star2.png ">
                 <span>photography</span>
                 <div>Creepeth one seas cattle grass<br> give moving saw give</div>
             </div>
-            <div class="opportunity">
-                <img src="img/pe-7s-magic-wand.png">
+            <div class="opportunity ">
+                <img src="img/pe-7s-magic-wand.png ">
                 <span>graphic design</span>
                 <div>Open, great whales air rule for,<br> fourth life whales</div>
             </div>
-            <div class="opportunity">
-                <img src="img/pe-7s-paint-bucket.png">
+            <div class="opportunity ">
+                <img src="img/pe-7s-paint-bucket.png ">
                 <span>illustrations</span>
                 <div>Whales likeness hath, man kind<br> for them air two won't</div>
             </div>
         </div>
     </section>
-    <section class="section-blue">
+    <section class="section-blue ">
         <p>“ Outstanding job and exceeded all expectations. It was a pleasure<br> to work with them on a sizable first project and am looking<br> forward to start the next one asap.”</p>
         <span>Michael Hopkins</span>
     </section>
-    <section class="white-section">
-        <div class="container container-img">
-            <img src="img/1.png">
-            <img src="img/2.png">
-            <img src="img/3.png">
-            <img src="img/4.png">
-            <img src="img/5.png">
+    <section class="white-section ">
+        <div class="container container-img ">
+            <img src="img/1.png ">
+            <img src="img/2.png ">
+            <img src="img/3.png ">
+            <img src="img/4.png ">
+            <img src="img/5.png ">
+        </div>
+    </section>
+    <section class="form">
+        <div class="container container-small">
+            <h1>Need a Project?</h1>
+            <p>Let us know what you're looking for in an agency. We'll take a look and see<br> if this could be the start of something beautiful.</p>
+            <div class="YN">
+                <input type="text" placeholder="Your Name">
+            </div>
+            <div class="YE">
+                <input type="text" placeholder="Your Email">
+            </div>
+            <div class="YT">
+                <input type="text" placeholder="Your Title">
+            </div>
+            <div class="YC">
+                <textarea placeholder="Your Comment"></textarea>
+            </div>
+            <div>
+                <button>send message</button>
+            </div>
         </div>
     </section>
 
+
 </body>
+<footer>
+    <div class="container">
+        <div class="copyright">
+            <h3>Piroll Design, Inc.</h3>
+            <p>© 2017 Piroll. All rights reserved.<br> Designed by robirurk.</p>
+        </div>
+        <div class="contact">
+            <p>hello@pirolltheme.com<br>+44 987 065 908 </p>
+
+        </div>
+        <div class="links">
+            <ul>
+                <li>Projects</li>
+                <li> About</li>
+                <li>Services</li>
+                <li>Carreer</li>
+            </ul>
+        </div>
+        <div class="links ">
+            <ul>
+                <li>News</li>
+                <li>Events</li>
+                <li>Contact</li>
+                <li>Legals</li>
+            </ul>
+        </div>
+        <div class="links links-social">
+            <ul>
+                <li>Facebook</li>
+                <li>Twitter</li>
+                <li>Instagram</li>
+                <li> Dribbble</li>
+            </ul>
+        </div>
+        <div></div>
+        <div></div>
+
+    </div>
+
+</footer>
 
 </html>
