--- a/index.html
+++ b/index.html
@@ -7,8 +7,13 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
     <link href="https://fonts.googleapis.com/css?family=Montserrat:300,400,500,600,700|Nunito+Sans:300,400,600,700&display=swap" rel="stylesheet">
-
+    <link rel="stylesheet" href="css/owl.carousel.min.css">
+    <link rel="stylesheet" href="css/owl.theme.default.min.css">
+    <link rel="stylesheet" href="//code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css">
+    <link rel="stylesheet" href="/resources/demos/style.css">
+    <link rel="stylesheet" href="//use.fontawesome.com/releases/v5.0.7/css/all.css">
     <link href="styleFapor.css" rel="stylesheet">
+
 
 </head>
 
@@ -52,7 +57,45 @@
                 <h1>We Design and Develop</h1>
                 <p>We are a new design studio based in USA. We have over 20 years of combined experience, and know a thing or two about designing websites and mobile apps.</p>
                 <a class="button " href="# ">contact us</a>
+
+                <div class="container-dialog">
+                    <button class="button-dialog" id="opener">Open Dialog</button>
+                    <div class="basic-dialog" id="dialog" title="">
+                        <form>
+                            <p>
+
+
+
+                                FORGOT YOUR PASSWORD?
+                            </p>
+
+                            <div class="white-block">
+                                <div class="">
+                                    <label for="basic-dialog">
+                                ENTER YOUR<br> EMAIL
+                               </label>
+
+
+                                    <input id="basic-dialog" type="email">
+                                </div>
+
+
+                                <div>
+                                    <button class="btn-rp">RESET PASSWORD</button>
+                                </div>
+                                <div class=" text-or">or</div>
+
+                                <div class="btn-fc">
+                                    <a href="https://www.facebook.com/" class="btn">Log In Using Facebook</a>
+
+
+                                </div>
+                            </div>
+                        </form>
+                    </div>
+                </div>
             </div>
+        </div>
 
         </div>
     </section>
@@ -165,8 +208,23 @@
         </div>
     </section>
     <section class="section-blue ">
-        <p>“ Outstanding job and exceeded all expectations. It was a pleasure<br> to work with them on a sizable first project and am looking<br> forward to start the next one asap.”</p>
-        <span>Michael Hopkins</span>
+        <!-- Set up your HTML -->
+        <div class="owl-carousel">
+            <div>
+                <p>“ Outstanding job and exceeded all expectations. It was a pleasure<br> to work with them on a sizable first project and am looking<br> forward to start the next one asap.”</p>
+                <span>Michael Hopkins</span>
+            </div>
+            <div>
+                <p>“ Outstanding job and exceeded all expectations. It was a pleasure<br> to work with them on a sizable first project and am looking<br> forward to start the next one asap.”</p>
+                <span>Michael Hopkins</span>
+            </div>
+            <div>
+                <p>“ Outstanding job and exceeded all expectations. It was a pleasure<br> to work with them on a sizable first project and am looking<br> forward to start the next one asap.”</p>
+                <span>Michael Hopkins</span>
+            </div>
+        </div>
+
+
     </section>
     <section class="white-section ">
         <div class="container container-img ">
@@ -200,46 +258,53 @@
     </section>
 
 
+
+    <footer>
+        <div class="container">
+            <div class="copyright">
+                <h3>Piroll Design, Inc.</h3>
+                <p>© 2017 Piroll. All rights reserved.<br> Designed by robirurk.</p>
+            </div>
+            <div class="contact">
+                <p>hello@pirolltheme.com<br>+44 987 065 908 </p>
+
+            </div>
+            <div class="links">
+                <ul>
+                    <li>Projects</li>
+                    <li> About</li>
+                    <li>Services</li>
+                    <li>Carreer</li>
+                </ul>
+            </div>
+            <div class="links ">
+                <ul>
+                    <li>News</li>
+                    <li>Events</li>
+                    <li>Contact</li>
+                    <li>Legals</li>
+                </ul>
+            </div>
+            <div class="links links-social">
+                <ul>
+                    <li>Facebook</li>
+                    <li>Twitter</li>
+                    <li>Instagram</li>
+                    <li> Dribbble</li>
+                </ul>
+            </div>
+            <div></div>
+            <div></div>
+
+        </div>
+
+    </footer>
+
+
+    <script src="https://code.jquery.com/jquery-2.2.4.min.js" integrity="sha256-BbhdlvQf/xTY9gja0Dq3HiwQF8LaCRTXxZKRutelT44=" crossorigin="anonymous"></script>
+    <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
+    <script src="js/owl.carousel.min.js"></script>
+    <script src="js/script.js"></script>
 </body>
-<footer>
-    <div class="container">
-        <div class="copyright">
-            <h3>Piroll Design, Inc.</h3>
-            <p>© 2017 Piroll. All rights reserved.<br> Designed by robirurk.</p>
-        </div>
-        <div class="contact">
-            <p>hello@pirolltheme.com<br>+44 987 065 908 </p>
-
-        </div>
-        <div class="links">
-            <ul>
-                <li>Projects</li>
-                <li> About</li>
-                <li>Services</li>
-                <li>Carreer</li>
-            </ul>
-        </div>
-        <div class="links ">
-            <ul>
-                <li>News</li>
-                <li>Events</li>
-                <li>Contact</li>
-                <li>Legals</li>
-            </ul>
-        </div>
-        <div class="links links-social">
-            <ul>
-                <li>Facebook</li>
-                <li>Twitter</li>
-                <li>Instagram</li>
-                <li> Dribbble</li>
-            </ul>
-        </div>
-        <div></div>
-        <div></div>
-
-    </div>
-
-</footer>
 
 </html>
